--- a/WebContent/admin/edit.html
+++ b/WebContent/admin/edit.html
@@ -14,6 +14,9 @@
         <link href="../static/css/mengular.css" rel="stylesheet">
         <link href="../static/css/edit.css" rel="stylesheet">
         <script src="../static/js/jquery.min.js"></script> 
+        <script src="../static/js/jquery.ui.widget.js"></script>
+        <script src="../static/js/jquery.iframe-transport.js"></script>
+        <script src="../static/js/jquery.fileupload.js"></script>
         <script src="../static/js/jquery.bootstrap.min.js"></script>
         <script src="../static/js/bootstrap.min.js"></script> 
         <script src="../static/js/bootstrap-datetimepicker.min.js"></script>
@@ -85,6 +88,10 @@
                     </div>
                     <div id="edit-blog-content"></div>
                 </div>
+            </div>
+            <img id="blog-cover-img" class="thumbnail">
+            <div id="blog-cover-progress" class="progress">
+                <div class="progress-bar progress-bar-striped active"></div>
             </div>
             <span id="blog-upload-cover-button" class="btn btn-success btn-lg btn-block fileinput-button">
                 <span>Upload Blog Cover Photo<small>（Reupload will replace old cover）</small></span>
