--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -55,20 +55,34 @@
 					</div>
 				</div>
 			</div>
-			<div id="blog-list">
-				<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
-					<div class="row">
-						<div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
-							<p><small class="text-muted">${tname}$</small></p>
-							<h4 class="text-primary">${title}$</h4>
+			<div class="row">
+				<div class="col-xs-12 col-md-8">
+					<div id="blog-list">
+						<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
+							<div class="row">
+								<div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+									<p><small class="text-muted">${tname}$</small></p>
+									<h4 class="text-primary">${title}$</h4>
+								</div>
+								<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+									<div class="hidden-xs"></div>
+									<h4 class="text-muted">${date}$, <strong class="">${readers}$</strong> readers</h4>
+								</div>
+								<div class="col-xs-12">
+									<img src="${src}$" class="blog-cover img-rounded">
+								</div>
+							</div>
 						</div>
-						<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
-							<div class="hidden-xs"></div>
-							<h4 class="text-muted">${date}$, <strong class="">${readers}$</strong> readers</h4>
+					</div>	
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<div id="type-right-list" class="list-group">
+						<div id="${tid}$" class="list-group-item mengular-template type-right-list-template">
+							<h4 class="text-center">${tname}$</h4>
 						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 			<nav id="page-nav" class="text-center">
                 <ul class="pagination"></ul>
             </nav>
