--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -35,13 +35,9 @@
 			</div>
 		</div>
 		<div class="container">
-			<div id="search-header" class="page-header">
+			<div id="search-header">
 				<div class="row">
-					<div class="col-md-9">
-						<input id="search-blog" type="text" placeholder="Search Title" class="text-info text-center">
-						<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
-					</div>
-					<div class="col-md-3">
+					<div class="col-xs-12 col-sm-5 col-md-3">
 						<div id="type-list" class="btn-group">
 							<button type="button" class="btn btn-default btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<span class="text-muted">All Types</span>
@@ -53,20 +49,23 @@
 							</ul>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-7 col-md-9">
+						<input id="search-blog" type="text" placeholder="Search Blog Title" class="text-info text-center">
+						<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
+					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 col-md-8">
+				<div class="col-xs-12 col-sm-8 col-md-8">
 					<div id="blog-list">
 						<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
 							<div class="row">
-								<div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
-									<p><small class="text-muted">${tname}$</small></p>
+								<div class="col-xs-12">
+									<small class="text-muted">${tname}$</small>
 									<h4 class="text-primary">${title}$</h4>
 								</div>
-								<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
-									<div class="hidden-xs"></div>
-									<h4 class="text-muted">${date}$, <strong class="">${readers}$</strong> readers</h4>
+								<div class="col-xs-12 blog-list-date">
+									<p class="text-muted">${date}$, <strong class="">${readers}$</strong> readers</p>
 								</div>
 								<div class="col-xs-12">
 									<img src="${src}$" class="blog-cover img-rounded">
@@ -75,11 +74,14 @@
 						</div>
 					</div>	
 				</div>
-				<div class="col-xs-12 col-md-4">
-					<div id="type-right-list" class="list-group">
-						<div id="${tid}$" class="list-group-item mengular-template type-right-list-template">
-							<h4 class="text-center">${tname}$</h4>
-						</div>
+				<div class="hidden-xs col-sm-4 col-md-4">
+					<div id="type-right-list" class="btn-group-vertical">
+						<button id="${tid}$" class="btn btn-default btn-lg mengular-template type-right-list-template ${tid}$" data-id="${tid}$">
+							<span class="text-muted">${tname}$</span>
+						</button>
+						<button id="show-right-all-type" class="btn btn-default btn-lg btn-block">
+							<span class="text-muted">All Type</span>
+						</button>
 					</div>
 				</div>
 			</div>
