fillText改为占位符替换

--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -31,7 +31,7 @@
 					</div>
 					<h1 class="pull-right home"><a href="index.html">Home</a></h1>
 					<div class="clearfix"> </div>
-					<h1 class="text-center"><label id="str-my-blogs">My Blogs</label></h1>
+					<h1 id="str-my-blogs" class="text-center">@{myBlogs}</h1>
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 								<i class="fa fa-lg fa-caret-down text-muted pull-right"></i>
 							</button>
 							<ul class="dropdown-menu">
-								<li id="show-all-type"><a id="str-all-types">All Types</a></li>
+								<li id="show-all-type"><a id="str-all-types">@{allTypes}</a></li>
 								<li role="separator" class="divider"></li>
 							</ul>
 						</div>
