--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -15,7 +15,7 @@
 		<script src="static/js/jquery.min.js"></script>
 		<script src="static/js/bootstrap.min.js"></script>
 		<script src="static/js/jquery.bootstrap.min.js"></script>
-		<script src="static/js/mengular-2.0.js"></script>
+		<script src="static/js/mengular.js"></script>
 		<script src="static/js/tools.js"></script>
 		<script src="dwr/engine.js"></script>
         <script src="dwr/interface/BlogManager.js"></script>
