--- a/WebContent/admin/list.html
+++ b/WebContent/admin/list.html
@@ -14,7 +14,7 @@
         <script src="../static/js/jquery.bootstrap.min.js"></script>
         <script src="../static/js/bootstrap.min.js"></script> 
         <script src="../static/js/summernote.min.js"></script>
-        <script src="../static/js/mengular-2.0.js"></script>
+        <script src="../static/js/mengular.js"></script>
         <script src="../static/js/tools.js"></script>
         <script src="../dwr/engine.js"></script>
         <script src="../dwr/interface/AdminManager.js"></script>
