--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Meng Li's Blog</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
@@ -15,7 +14,7 @@
 		<script src="static/js/jquery.min.js"></script>
 		<script src="static/js/jquery.i18n.properties.min.js"></script>
 		<script src="static/js/bootstrap.min.js"></script>
-		<script src="static/js/mengular-2.0.js"></script>
+		<script src="static/js/mengular.js"></script>
 		<script src="static/js/tools.js"></script>
 		<script src="dwr/engine.js"></script>
         <script src="dwr/interface/BlogManager.js"></script>
@@ -26,12 +25,19 @@
 		<div id="home" class="header">
 			<div class="top-header">
 				<div class="container">
-					<div class="logo">
-						<a href="index.html"><img src="static/images/logo.png"/></a>
+					<h1 class="pull-left home"><a href="index.html">@{blogs_home}</a></h1>
+					<div id="language-selector" class="dropdown pull-right">
+						<button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							<span >@{language_broswer}</span>
+							<span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+							<li data-lang="en"><a>@{language_en}</a></li>
+							<li data-lang="zh"><a>@{language_zh}</a></li>
+						</ul>
 					</div>
-					<h1 class="pull-right home"><a href="index.html">Home</a></h1>
 					<div class="clearfix"> </div>
-					<h1 id="str-my-blogs" class="text-center">@{myBlogs}</h1>
+					<h1 id="str-my-blogs" class="text-center">@{blogs_my_blogs}</h1>
 				</div>
 			</div>
 		</div>
@@ -45,13 +51,13 @@
 								<i class="fa fa-lg fa-caret-down text-muted pull-right"></i>
 							</button>
 							<ul class="dropdown-menu">
-								<li id="show-all-type"><a id="str-all-types">@{allTypes}</a></li>
+								<li id="show-all-type"><a id="str-all-types">@{blogs_all_types}</a></li>
 								<li role="separator" class="divider"></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-7 col-md-9">
-						<input id="search-blog" type="text" placeholder="Search Blog Title" class="text-info text-center">
+						<input id="search-blog" type="text" placeholder="@{blogs_search_placehoder}" class="text-info text-center">
 						<i id="search-cancel" class="fa fa-times-circle-o fa-lg pull-right text-muted"></i>
 					</div>
 				</div>
@@ -66,7 +72,7 @@
 									<h4 class="text-primary">${title}$</h4>
 								</div>
 								<div class="col-xs-12 blog-list-date">
-									<p class="text-muted">${date}$, <strong class="">${readers}$</strong> readers</p>
+									<p class="text-muted">@{blogs_created_in} ${date}$, <strong class="">${readers}$</strong> @{blogs_readers}</p>
 								</div>
 								<div class="col-xs-12">
 									<img src="${src}$" class="blog-cover img-rounded">
@@ -81,7 +87,7 @@
 							<span class="text-muted">${tname}$</span>
 						</button>
 						<button id="show-right-all-type" class="btn btn-default btn-lg btn-block">
-							<span class="text-muted">All Type</span>
+							<span class="text-muted">@{blogs_all_types}</span>
 						</button>
 					</div>
 				</div>
