--- a/WebContent/admin/edit.html
+++ b/WebContent/admin/edit.html
@@ -6,6 +6,7 @@
         <link rel="Shortcut Icon" href="../static/images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../static/css/bootstrap-switch.min.css" rel="stylesheet">
         <link href="../static/css/font-awesome.min.css" rel="stylesheet">
         <link href="../static/css/summernote.min.css" rel="stylesheet">
         <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
@@ -19,6 +20,7 @@
         <script src="../static/js/jquery.fileupload.js"></script>
         <script src="../static/js/jquery.bootstrap.min.js"></script>
         <script src="../static/js/bootstrap.min.js"></script> 
+        <script src="../static/js/bootstrap-switch.min.js"></script> 
         <script src="../static/js/bootstrap-datetimepicker.min.js"></script>
         <script src="../static/js/bootstrap-datetimepicker.zh-CN.js"></script>
         <script src="../static/js/summernote.min.js"></script>
@@ -94,14 +96,18 @@
                         <div class="progress-bar progress-bar-striped active"></div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-9">
+                <div class="col-xs-12 col-md-8">
                     <span id="blog-upload-cover-button" class="btn btn-success btn-lg btn-block fileinput-button">
                         <span>Upload Blog Cover Photo<small>（Reupload will replace old cover）</small></span>
                         <input id="blog-upload-cover" type="file" name="files[]">
                     </span>
                 </div>
-                <div class="col-xs-12 col-md-3">
+                <div class="col-xs-6 col-md-2">
                     <button id="blog-cover-delete" class="btn btn-danger btn-block btn-lg">Delete Cover</button>
+                </div>
+                <div class="col-xs-6 col-md-2">
+                	<small class="text-muted">Set as blog backgroud</small><br>
+                	<input id="blog-cover-bgenable" type="checkbox" data-size="mini" data-on-text="Enable" data-off-text="Disable">
                 </div>
             </div> 
         </div>
