修复博文页在加入get参数后error的bug

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -29,11 +29,11 @@
 				<div class="container">
 					<h1 class="pull-left home"><a href="blogs.html">@{blog_blogs}</a></h1>
 					<div id="language-selector" class="dropdown pull-right">
-						<button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						<button id="language-selector-button"  class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 							<span >@{language_broswer}</span>
 							<span class="caret"></span>
 						</button>
-						<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
 							<li data-lang="en"><a>@{language_en}</a></li>
 							<li data-lang="zh"><a>@{language_zh}</a></li>
 						</ul>
