--- a/WebContent/admin/add.html
+++ b/WebContent/admin/add.html
@@ -51,13 +51,13 @@
                 <h3 class="text-center text-muted">Add a Blog</h3>
             </div>
             <div id="add-blog-div" class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-font fa-lg"></i></span>
                         <input id="add-blog-title" type="text" class="form-control" placeholder="Blog Title">
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-clipboard fa-lg"></i></span>
                         <select id="add-blog-type" class="form-control">
@@ -65,20 +65,18 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
                         <span class="input-group-addon form-icon"><i class="fa fa-calendar fa-lg"></i></span>
                         <input id="add-blog-date" type="text" class="form-control" placeholder="Create Date" readonly>
                     </div>
-                </div>
-                <div class="col-xs-6 col-sm-3 col-md-1">
+                </div>      
+                <div class="col-xs-12"><hr></div>
+                <div class="col-xs-6">
                     <button id="add-blog-clear" class="btn btn-block btn-default">Clear</button>
                 </div>
-                <div class="col-xs-6 col-sm-3 col-md-1">
-                    <button id="add-blog-submit" class="btn btn-block btn-success">Save</button>
-                </div>
-                <div class="col-xs-12">
-                     <div id="add-blog-content"></div>
+                <div class="col-xs-6">
+                    <button id="add-blog-submit" class="btn btn-block btn-success">Create Blog</button>
                 </div>
             </div>
         </div>
