--- a/WebContent/admin/index.html
+++ b/WebContent/admin/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="copy-right text-center">
             <div class="container">             
-                <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
+                <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li © 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
             </div>
         </div>
     </body>
