--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -66,18 +66,20 @@
 				<div class="col-xs-12 col-sm-8 col-md-8">
 					<div id="blog-list">
 						<div id="${bid}$" class="bs-callout mengular-template blog-list-template">
-							<div class="row">
-								<div class="col-xs-12">
-									<small class="text-muted">${tname}$</small>
-									<h4 class="text-primary">${title}$</h4>
+							<a href="blogs/${bid}$">
+								<div class="row">
+									<div class="col-xs-12">
+										<small class="text-muted">${tname}$</small>
+										<h4 class="text-primary">${title}$</h4>
+									</div>
+									<div class="col-xs-12 blog-list-date">
+										<p class="text-muted">@{blogs_created_in} ${date}$, <strong class="">${readers}$</strong> @{blogs_readers}</p>
+									</div>
+									<div class="col-xs-12">
+										<img src="${src}$" class="blog-cover img-rounded">
+									</div>
 								</div>
-								<div class="col-xs-12 blog-list-date">
-									<p class="text-muted">@{blogs_created_in} ${date}$, <strong class="">${readers}$</strong> @{blogs_readers}</p>
-								</div>
-								<div class="col-xs-12">
-									<img src="${src}$" class="blog-cover img-rounded">
-								</div>
-							</div>
+							</a>
 						</div>
 					</div>	
 				</div>
