summernote定制toolbar以及前端国际化

--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -18,6 +18,7 @@
 		<script src="static/js/bootstrap.min.js"></script>
 		<script src="static/js/jquery.bootstrap.min.js"></script>
 		<script src="static/js/summernote.min.js"></script>
+		<script src="static/js/summernote-zh-CN.min.js"></script>
 		<script src="static/js/mengular.js"></script>
 		<script src="static/js/tools.js"></script>
 		<script src="dwr/engine.js"></script>
@@ -36,8 +37,8 @@
 							<span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
-							<li data-lang="en"><a>@{language_en}</a></li>
-							<li data-lang="zh"><a>@{language_zh}</a></li>
+							<li data-lang="en-US"><a>@{language_en_US}</a></li>
+							<li data-lang="zh-CN"><a>@{language_zh_CN}</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
