--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,8 +29,8 @@
 							<span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu" aria-labelledby="language-selector-button">
-							<li data-lang="en"><a>@{language_en}</a></li>
-							<li data-lang="zh"><a>@{language_zh}</a></li>
+							<li data-lang="en-US"><a>@{language_en_US}</a></li>
+							<li data-lang="zh-CN"><a>@{language_zh_CN}</a></li>
 						</ul>
 					</div>
 					<div class="top-header-info">
