--- a/WebContent/admin/index.html
+++ b/WebContent/admin/index.html
@@ -24,8 +24,8 @@
     </head>
     <body>
         <div id="main-container" class="container">
-        	<h1 class="text-center text-success"><i class="fa fa-bold"></i></h1>
-            <h3 class="text-center text-success">Blog System Management</h3>
+        	<h1 class="text-center text-success"><i class="fa fa-file-text"></i></h1>
+            <h2 class="text-center text-success">Blog Management</h2>
             <div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4">
                     <div class="input-group">
